Fixed an issue with the btt btn not being clickable by adding a high z-index to it in base.css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -148,7 +148,8 @@ a.gs-badge > span.badge:hover {
     width: 42px;
     position: fixed;
     bottom: 60px;
-    right: 10px;    
+    right: 10px;   
+    z-index: 9999999; 
 }
 
 .btt-link,
